--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt,a4paper,twoside]{article}
-\usepackage[noeledsec,noend,noledgroup,series={A,C},parapparatus]{reledmac}
+\usepackage[noeledsec,noend,noledgroup,nopenalties,series={A,C},parapparatus]{reledmac}
 \usepackage{reledpar}
 \usepackage{fontspec}
 \usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.95cm,outer=1.65cm,bottom=2.54cm]{geometry}
@@ -60,7 +60,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	\textit{Edición preparada por I. Brachamons Letesmus}.
+	\textit{Edición preparada por} I. Brachamons Letesmus.
 \end{flushright}
 
 \begin{flushright}
@@ -90,81 +90,82 @@ No se conservaron autógrafos de alguna copla ni testimonios que puedan consider
 \addcontentsline{toc}{section}{Testimonios}
 
 \textit{LB3} = \textit{Cancionero de Egerton} [British Library, Eg. 939].
-
+%
 Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 cuardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15\tsup{r.}-18\tsup{v.} contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19\tsup{v.}] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. \url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}\vspace{5pt}
 
 \textit{82*JM} = \textit{Vita Christi por fray Íñigo de Mendoza} [RBME, 100-II-17].
-
+%
 Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41\tsup{r.}-44\tsup{v.} contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. \url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}\vspace{5pt}
 
 \textit{86*RL} = \textit{Cancionero de Ramón de Llavia} [BNE, INC/2567].
-
+%
 Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73\tsup{r.}-76\tsup{r.} contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}. \url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}\vspace{5pt}
 
-\textit{HH1} = \textit{Cancionero de Oñate-Castañeda} [Harvard, Houghton Library, MS. Span. 97].
-
+\textit{HH1} = \textit{Cancionero de Oñate-Castañeda} [Harvard Houghton Library, MS. Span. 97].
+%
 Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421\tsup{v.}-424\tsup{v.} contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\vspace{5pt} 
 
 \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia} [BNE, MS/4114].
-
+%
 Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407\tsup{r.}-418\tsup{v.} contienen las coplas X-XL [acéfalo]. \url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}\vspace{5pt}
 
 \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza} [BNE, INC/897].
-
+%
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. \url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}
 
 \section*{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{section}{Criterios de edición}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteC{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} --esto es, \textit{EM6} y \textit{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnoteC{Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
+%
 	\begin{center}
 		\begin{tikzpicture}[every node/.style={font=\normalsize}, sibling distance=10mm]
-		
+		%
 		% Nivel 0
 		\node (x) at (0,0) {\textit{X}};
 		
 		% Nivel 1
 		\node (a) at (-2.5,-1.5) {α};
 		\node (b) at (2.5,-1.5) {β};
-		
+		%
 		% Nivel 2
 		\node (lb3) at (-3.6,-2.3) {LB3};
 		\node (g) at (-1.5,-2.3) {γ};
 		\node (im) at (3,-3.4) {83*IM};
-		
+		%
 		% Nivel 3
 		\node (d) at (-3,-3.4) {δ};
 		\node (e) at (-0.5,-6) {ε};
-		
+		%
 		% Nivel 4
 		\node (jm) at (-4,-4.5) {82*JM};
 		\node (rl) at (-1.9,-5.6) {86*RL};
 		\node (hh1) at (-1.3,-7) {HH1};
 		\node (mn19) at (0.36,-7) {MN19};
-		
+		%
 		% Conexiones
 		\draw (x) -- (a);
 		\draw (x) -- (b);
-		
+		%
 		\draw (a) -- (lb3);
 		\draw (a) -- (g);
 		\draw (b) -- (im);
-		
+		%
 		\draw (g) -- (d);
 		\draw (g) -- (e);
-		
+		%
 		\draw (d) -- (jm);
 		\draw (d) -- (rl);
-		
+		%
 		\draw (e) -- (hh1);
 		\draw (e) -- (mn19);
 	\end{tikzpicture}
 	\end{center}
-
+%
 Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción de la obra manriqueña.
 
 Criterios de presentación gráfica\footnoteC{Las modificaciones no aplican al aparato de variantes, a excepción de \textit{nn} y las grafías dobles.}:
-
+%
 \begin{itemize}[label=--]%
 \item \textit{b}-\textit{v} = se conserva la alternancia.
 \item \textit{f} = se mantiene en vocablos como \comillas{fizo} [hizo], \comillas{falló} [halló], \comillas{fijo} [hijo], porque, en general, corresponden a la \textit{f} inicial latina y, por tanto anulan las sinalefas.
@@ -179,7 +180,7 @@ Criterios de presentación gráfica\footnoteC{Las modificaciones no aplican al a
 \item \textit{th} = se conserva para indicar latinismos cultos en el texto.
 \item \textit{⁊} = se interpreta por \textit{e}.%
 \end{itemize}
-
+%
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
