--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -222,7 +222,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \newpage
 %Aquí inician las COPLAS POR LA MVERTE DE SV PADRE.
 {\begin{center}
-		[I]\footnoteA{[I] {\fontsize{7.5}{9}\selectfont INCIPIT} = \comillas{Coplas que fiço don jorge ma\textit{n}rriq\textit{ue} por la muerte de su padre} \textit{LB3}; \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre} \textit{82*JM}; \comillas{De don jorge manrique por la muerte de su padre} \textit{86*RL}; \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre} \textit{HH1}; \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre} \textit{83*IM}.}
+		[I]\footnoteA{[I] {\fontsize{7.5}{9}\selectfont INCIPIT} = Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre \textit{LB3}; Dezir de don jorge manrriq\textit{ue} por la muerte de su padre \textit{82*JM}; De don jorge manrique por la muerte de su padre \textit{86*RL}; Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre \textit{HH1}; Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre \textit{83*IM}.}
 \end{center}
 %Espacio para que el comando que ejecuta el sistema no se quiebre.
 \beginnumbering
@@ -260,7 +260,7 @@ por tal manera.
 \pend
 
 \begin{center}
-		[III]\footnoteA{[III] \comillas{conpara} \textit{LB3}.}
+		[III]\footnoteA{[III] conpara \textit{LB3}.}
 \end{center}
 \pstart
 N\textit{uest}ras vidas son los ríos\\
@@ -278,7 +278,7 @@ y los ricos.
 \pend
 
 \begin{center}
-	[IV]\footnoteA{[IV] «ynuoca» \textit{LB3}; «inuocaçion» \textit{82*JM}; «Inuocacion» \textit{86*RL}.}
+	[IV]\footnoteA{[IV] ynuoca \textit{LB3}; inuocaçion \textit{82*JM}; Inuocacion \textit{86*RL}.}
 \end{center}
 \pstart
 Dexo las invocaçiones\\
@@ -296,7 +296,7 @@ su deidad.
 \pend
 
 \begin{center}
-	[V]\footnoteA{[V] \comillas{ap[lica] y [co]\textit{n}para} \textit{ras. LB3}.}
+	[V]\footnoteA{[V] ap[lica] y [co]\textit{n}para \textit{ras. LB3}.}
 	\end{center}
 \pstart
 Este mu\textit{n}do es el camino\\
@@ -314,7 +314,7 @@ descansamos.
 \pend
 
 \begin{center}
-	[VI]\footnoteA{[VI] \comillas{p\textit{r}osigue} \textit{LB3}.}
+	[VI]\footnoteA{[VI] p\textit{r}osigue \textit{LB3}.}
 \end{center}
 \pstart
 \edtext{Este}{\lemma{este}\Afootnote{y este \textit{82*JM}}} mu\textit{n}do bueno fue\\
@@ -655,7 +655,7 @@ co\textit{n} tu flecha.
 \pend
 
 \begin{center}
-	[XXV]\footnoteA{[XXV] XIII en \textit{82*JM}. || \comillas{dirige la fabla al maestre do\textit{n} rodrigo su padre} \textit{LB3}; \comillas{ffabla del maestre do\textit{n} rr\textit{odri}go ma\textit{n}riq\textit{ue}} \textit{HH1}.}
+	[XXV]\footnoteA{[XXV] XIII en \textit{82*JM}. // dirige la fabla al maestre do\textit{n} rodrigo su padre \textit{LB3}; ffabla del maestre do\textit{n} rr\textit{odri}go ma\textit{n}riq\textit{ue} \textit{HH1}.}
 \end{center}
 \pstart
 Aquel de \edtext{buenos}{\Afootnote{bienes \textit{MN19}}} abrigo,\\
@@ -691,7 +691,7 @@ Y a los bravos \edtext{y dañosos}{\Afootnote{y furiosos \textit{82*JM}; y sober
 \pend
 
 \begin{center}
-	[XXVII]\footnoteA{[XXVII] XV en \textit{82*JM}. || \comillas{conpara} \textit{LB3}.}
+	[XXVII]\footnoteA{[XXVII] XV en \textit{82*JM}. // conpara \textit{LB3}.}
 \end{center}
 \pstart
 En \edtext{}{\Afootnote[nosep]{en [la] \textit{eras. LB3}}} ventura, \edtext{Otavïano}{\lemma{otauiano}\Afootnote{octoniano \textit{82*JM}}},\\
@@ -709,7 +709,7 @@ que prometía.
 \pend
 
 \begin{center}
-	[XXVIII]\footnoteA{[XXVIII] XXVI en \textit{82*JM}. || \comillas{prosigue} \textit{LB3}.}
+	[XXVIII]\footnoteA{[XXVIII] XXVI en \textit{82*JM}. // prosigue \textit{LB3}.}
 \end{center}
 \pstart
 Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia \textit{82*JM}}} e\textit{n} cleme\textit{n}çia,\\
@@ -734,8 +734,8 @@ No dexó grandes thesoros\\
 ni \edtext{alcançó}{\lemma{alcanço}\Afootnote{llego \textit{HH1}}} \edtext{gra\textit{n}des}{\Afootnote{muchas \textit{86*RL}}} riq\textit{ue}zas\\ 
 ni baxillas,\\
 mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteE{Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» --que ya citó \textcite[cap. IX]{MenendezYPelayo1944}--, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\\
-	\noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
-	\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \textit{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
+\noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
+\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \textit{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
 gana\textit{n}do sus fortalezas \edtext{}{\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}\\
 y sus villas;\\
 y en las lides que vençió,\\
@@ -818,7 +818,7 @@ a su puerta,
 \pend
 
 \begin{center}
-	[XXXIV]\footnoteA{[XXXIV] XXII en \textit{82*JM}. || \comillas{ffabla la muerte con el maestre} \textit{LB3}.}
+	[XXXIV]\footnoteA{[XXXIV] XXII en \textit{82*JM}. // ffabla la muerte con el maestre \textit{LB3}.}
 \end{center}
 \pstart
 diziendo: «bue\textit{n} cavallero,\\
@@ -890,7 +890,7 @@ partid con buena \edtext{}{\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnote
 \pend
 
 \begin{center}
-	[XXXVIII]\footnoteA{[XXXVIII] «rresponde don rrodrigo manrrique a la muerte» \textit{LB3}; «Respuesta del maestre» \textit{82*JM}; «Reza a la muerte» \textit{86*RL}; «Respondel Maestre» \textit{MN19}, \textit{83*IM}.}
+	[XXXVIII]\footnoteA{[XXXVIII] rresponde don rrodrigo manrrique a la muerte \textit{LB3}; Respuesta del maestre \textit{82*JM}; Reza a la muerte \textit{86*RL}; Respondel Maestre \textit{MN19}, \textit{83*IM}.}
 \end{center}
 \pstart
 «No \edtext{gastemos}{\Afootnote{tengamos \textit{86*RL}}} tie\textit{n}po ya\\
@@ -908,7 +908,7 @@ q\textit{ua}ndo Dios q\textit{ui}ere q\textit{ue} muera,\\
 \pend
 
 \begin{center}
-	[XXXIX]\footnoteA{[XXXIX] «oraçion que fizo el maestre» \textit{LB3}; «Oracion» \textit{ 82*JM}, \textit{86*RL}, \textit{83*IM}; «Oracion quel Maestre face á Dios» \textit{MN19}.}
+	[XXXIX]\footnoteA{[XXXIX] oraçion que fizo el maestre \textit{LB3}; Oracion \textit{ 82*JM}, \textit{86*RL}, \textit{83*IM}; Oracion quel Maestre face á Dios \textit{MN19}.}
 \end{center}
 \pstart
 »Tú, q\textit{ue} por n\textit{uest}ra maldat\\
