--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -24,12 +24,12 @@
 \fnpos{critical-familiar}
 \fnpos{{A}{familiar},{A}{critical},{E}{familiar}}
 \Xarrangement{paragraph}
-\Xnonbreakableafternumber
+\arrangementX[A]{paragraph}
 \Xinplaceoflemmaseparator{0em}
 \Xnumberonlyfirstinline
 \Xnumberonlyfirstintwolines
-\parindentX
-\Xsymlinenum{//}
+\parindentX[E]
+\Xsymlinenum{||}
 \Xbeforesymlinenum{-0.5em}
 \newcommand{\comillas}[1]{«#1»}
 \newcommand{\tsup}[1]{\textsuperscript{#1}}
@@ -173,7 +173,10 @@ Las contracciones se separan sin indicación alguna. Las grafías en cursiva cor
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{//}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones, entre otros-- y plausibles interpretaciones.
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones, entre otros-- y plausibles interpretaciones.
+\relax
+\vfill
+\newpage
 
 \section*{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
@@ -452,7 +455,7 @@ en que caemos.\\
 No mirando \edtext{n\textit{uest}ro daño}{\Afootnote{nuestros daños \textit{MN19}}},\\
 corremos a rie\textit{n}da suelta\\
 sin parar;\\
-\edtext{desque}{\Afootnote{cuando \textit{HH1}, \textit{83*IM}}}\footnoteE{Conjunción \comillas{desde que}.} vemos el engaño,\\
+\edtext{desque}{\Afootnote{cuando \textit{HH1}, \textit{83*IM}}} vemos el engaño,\\
 \edtext{si}{\Afootnote{y \textit{δ}, \textit{ε}, \textit{83*IM}}} queremos dar la buelta\\
 no ay lugar.
 \pend
@@ -557,7 +560,7 @@ las baxillas ta\textit{n} febridas,\\
 los enriques y reales\\
 del thesoro,\\
 los jaezes, los cavallos\\
-\edtext{de su gente}{\Afootnote{desta gente \textit{82*JM}; de sus gentes \textit{86*RL}; y sus gentes \textit{HH1}}}\edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{om. MN19}}} y atavíos\\
+\edtext{de su gente}{\Afootnote{desta gente \textit{82*JM}; de sus gentes \textit{86*RL}; y sus gentes \textit{HH1}}}\edtext{}{\Afootnote[nosep]{\textit{om. MN19}}} y atavíos\\
 ta\textit{n} sobrados\\
 ¿\edtext{dónde}{\lemma{donde}\Afootnote{ado \textit{HH1}}} iremos a buscallos?\\
 ¿Qué fuero\textit{n} sino roçíos\\
@@ -655,7 +658,7 @@ co\textit{n} tu flecha.
 \pend
 
 \begin{center}
-	[XXV]\footnoteA{[XXV] XIII en \textit{82*JM}. // dirige la fabla al maestre do\textit{n} rodrigo su padre \textit{LB3}; ffabla del maestre do\textit{n} rr\textit{odri}go ma\textit{n}riq\textit{ue} \textit{HH1}.}
+	[XXV]\footnoteA{[XXV] XIII en \textit{82*JM}. || dirige la fabla al maestre do\textit{n} rodrigo su padre \textit{LB3}; ffabla del maestre do\textit{n} rr\textit{odri}go ma\textit{n}riq\textit{ue} \textit{HH1}.}
 \end{center}
 \pstart
 Aquel de \edtext{buenos}{\Afootnote{bienes \textit{MN19}}} abrigo,\\
@@ -691,7 +694,7 @@ Y a los bravos \edtext{y dañosos}{\Afootnote{y furiosos \textit{82*JM}; y sober
 \pend
 
 \begin{center}
-	[XXVII]\footnoteA{[XXVII] XV en \textit{82*JM}. // conpara \textit{LB3}.}
+	[XXVII]\footnoteA{[XXVII] XV en \textit{82*JM}. || conpara \textit{LB3}.}
 \end{center}
 \pstart
 En \edtext{}{\Afootnote[nosep]{en [la] \textit{eras. LB3}}} ventura, \edtext{Otavïano}{\lemma{otauiano}\Afootnote{octoniano \textit{82*JM}}},\\
@@ -709,7 +712,7 @@ que prometía.
 \pend
 
 \begin{center}
-	[XXVIII]\footnoteA{[XXVIII] XXVI en \textit{82*JM}. // prosigue \textit{LB3}.}
+	[XXVIII]\footnoteA{[XXVIII] XXVI en \textit{82*JM}. || prosigue \textit{LB3}.}
 \end{center}
 \pstart
 Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia \textit{82*JM}}} e\textit{n} cleme\textit{n}çia,\\
@@ -772,7 +775,7 @@ que co\textit{n} su braço \edtext{pintó}{\lemma{pinto}\Afootnote{gano \textit{
 en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} joventud,\\
 co\textit{n} otras nuevas bitorias,\\
 agora las renovó\\
-en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteE{363, \comillas{en la joventud}; 366, \comillas{en la senetud} = Ambos pasajes, siguiendo a \textit{LB3} y \textit{82*JM}, son un pentasílabo agudo, esto es, un hexasílabo, incurriendo, evidentemente, en una hipermetría. En este caso, \textit{86*RL} y \textit{HH1} omiten \textit{la}, pero aun así incurren en una hipermetría por ser tetrasílabos agudos, por tanto, pentasílabos. \textcite{Beltrán1991} selecciona \textit{en la juventud}, lección de su testimonio de base, pero en \textcite{Beltrán2013} selecciona \textit{en juventud}, y no ofrece argumentos de su cambio, sino que lo descarta en el aparato crítico. Según Navarro, en los pasajes «irregulares» Manrique aplicó el pentasílabo quebrado «en condiciones de compensación o sinalefa respecto al octosílabo precedente», que fue «meramente potestativa» y que «no la aplicó de manera sistemática» \parencite[175]{Navarro1961}. Aun así, estos dos pasajes parecen ser irresolubles, incluso aplicando esta regla, que solo funciona si se seleccionan las variantes de \textit{86*RL} y \textit{HH1}, esto es, omitir \textit{la}. Resulta complejo cuando otros testimonios no corrigen la hipermetría con sus lecciones. Los lectores podrán elegir cuál variante consideran adecuada, en tanto no sea la de \textit{MN19}, que ya «excede el exceso» con su hexasílabo agudo.};\\
+en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteE{363, \comillas{en la joventud}; 366, \comillas{en la senetud} = ambos pasajes, siguiendo a \textit{LB3} y \textit{82*JM}, son un pentasílabo agudo, esto es, un hexasílabo, incurriendo, evidentemente, en una hipermetría. En este caso, \textit{86*RL} y \textit{HH1} omiten \textit{la}, pero aun así incurren en una hipermetría por ser tetrasílabos agudos, por tanto, pentasílabos. \textcite{Beltrán1991} selecciona \textit{en la juventud}, lección de su testimonio de base, pero en \textcite{Beltrán2013} selecciona \textit{en juventud}, y no ofrece argumentos de su cambio, sino que lo descarta en el aparato crítico. Según Navarro, en los pasajes «irregulares» Manrique aplicó el pentasílabo quebrado «en condiciones de compensación o sinalefa respecto al octosílabo precedente», que fue «meramente potestativa» y que «no la aplicó de manera sistemática» \parencite[175]{Navarro1961}. Aun así, estos dos pasajes parecen ser irresolubles, incluso aplicando esta regla, que solo funciona si se seleccionan las variantes de \textit{86*RL} y \textit{HH1}, esto es, omitir \textit{la}. Resulta complejo cuando otros testimonios no corrigen la hipermetría con sus lecciones. Los lectores podrán elegir cuál variante consideran adecuada, en tanto no sea la de \textit{MN19}, que ya «excede el exceso» con su hexasílabo agudo.};\\
 \edtext{por}{\Afootnote{que por \textit{LB3}}} su grand abilidat,\\
 \edtext{por}{\Afootnote{y por \textit{LB3}}} méritos y ançianía\\
 bie\textit{n} gastada,\\
@@ -813,12 +816,12 @@ despu\textit{é}s de ta\textit{n}ta hazaña\\
 a que no puede bastar\\ 
 cuenta çierta,\\
 en la su villa de Ocaña,\\
-vino la Muerte \edtext{a}{\Afootnote{\textit{om. 83*IM}}} llamar\edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{lamar \textit{err. 83*IM}}}\\
+vino la Muerte \edtext{a}{\Afootnote{\textit{om. 83*IM}}} llamar\edtext{}{\Afootnote[nosep]{lamar \textit{err. 83*IM}}}\\
 a su puerta, 
 \pend
 
 \begin{center}
-	[XXXIV]\footnoteA{[XXXIV] XXII en \textit{82*JM}. // ffabla la muerte con el maestre \textit{LB3}.}
+	[XXXIV]\footnoteA{[XXXIV] XXII en \textit{82*JM}. || ffabla la muerte con el maestre \textit{LB3}.}
 \end{center}
 \pstart
 diziendo: «bue\textit{n} cavallero,\\
@@ -926,7 +929,7 @@ me perdona.»
 \pend
 
 \begin{center}
-    [XL]\footnoteA{[XL] «fin» \textit{LB3}, \textit{86*RL}, \textit{MN19}; «Torna el actor y faze fin» \textit{82*JM}.}
+    [XL]\footnoteA{[XL] fin \textit{LB3}, \textit{86*RL}, \textit{MN19}; Torna el actor y faze fin \textit{82*JM}.}
 \end{center}
 \pstart
 Así, co\textit{n} tal ente\textit{n}der\\
